--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 </div>
             
                 <div class="right">
-                    <a href="#" id="sign-in">Sign In</a>
+                    <a href="/sign_in.html" id="sign-in">Sign In</a>
                 </div>
            </div>
 
